--- a/index.html
+++ b/index.html
@@ -320,8 +320,8 @@ footer {
           </ul>
 		  
 		  <video width="320" height="240" controls>
-<source src="video/lion-158980 (2).mp4" type="video/mp4">
-<source src="video/lion-158980 (2).ogg" type="video/ogg">
+<source src="video/mov_bbb.mp4" type="video/mp4">
+<source src="video/mov_bbb.ogg" type="video/ogg">
 Your browser does not support the video tag.
 </video>
 		  
